Helm-chart/ingress-yaml-file/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocdtesting
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: letsautomate.argocd.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx
            port:
              number: 8080
